<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ScroidActivity!</string>
    <string name="app_name">Scroid</string>
    <string name="tab_navigation">Tab Navigation</string>
    <string name="tab_navigation_content">Tabs can be useful for switching between a limited number of items. You can also collapse the main body of the action bar on small devices so that only the tab bar is displayed. See the source for more information.</string>
    <string name="Username">Usuario</string>
    <string name="Password">Password</string>
    <string name="LoginButton">Login</string>
    <string name="RegistroButton">Registrarse</string>
    <string name="tab_proyecto">Proyecto</string>
    <string name="tab_sprints">Sprints</string>
    <string name="tab_informes">Informes</string>
    <string name="tab_reunion">Reunión</string>
    <string name="tab_estadisticas">Estadísticas</string>
    <string name="loginMessage">Bienvenido a Scroid. Logueate aquí:</string>
    <string name="loginMessageNewAccount">Registrate para crearte una cuenta. Pulsa registrate</string>
    <string name="loginMessagePasswordEmpty">Teclea tu password</string>
    <string name="loginDialogMessage">Logueando…</string>
    <string name="loginMessageFailInvalidBoth">Introduzca  Usuario y Password validos</string>
    <string name="loginMessageFailInvalidPass">Introduzca un password valido</string>
    <string name="usernameLabel">Usuario</string>
    <string name="passwordLabel">Password</string>
    <string name="loginButton">Login</string>
    <string name="registroLabel">Regístrate</string>
    <string name="no_sprints">No existen sprints</string>
    <string name="no_tareas">No existen tareas</string>
    <string name="inicio">Inicio: </string>
    <string name="fin">Fin: </string>
    <string name="estado_finalizado">Finalizado</string>
    <string name="estado_no_iniciado">No iniciado</string>
    <string name="estado_en_curso">En curso</string>
    <string name="nombrePrograma">Scroid</string>
    <string name="bienvenidaMessage">Estas logueado. Bienvenido a Scroid, ahora puedes hacer uso de la aplicacion</string>
    <string name="nombreRegistro">Nombre</string>
    <string name="apellidosRegistro">Apellidos</string>
    <string name="fechaNacRegistro">Fecha de Nac.</string>
    <string name="emailRegsitro">E-mail</string>
    <string name="passwordRegistro">Password</string>
    <string name="regsitroButton">Enviar</string>
    <string name="todo">To do</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="no_tareas">No hay tareas en este proyecto</string>
    <string name="estado">Estado:</string>
    <string name="duracion_estimada">Duración estimada:</string>
    <string name="duracion_restante">Duración restante:</string>
    <string name="total_horas">Total de horas:</string>
    <string name="usuario">Usuario:</string>
    <string name="tarea_no_descripcion">Tarea sin descripción</string>
    <string name="dialog_usuarios_titulo">Seleccione un usuario:</string>
    <string name="dialog_usuarios_no_usuarios">No existen usuarios</string>
    <string name="dialog_estado_titulo">Seleccione un estado:</string>
    <string name="dialog_fecha_titulo">Seleccione una fecha:</string>
    <string name="dialog_descripcion_titulo">Introduzca la descripción:</string>
    <string name="aceptar">Aceptar</string>
    <string name="dialog_duracion_estimada_titulo">Seleccione una carta:</string>
    <string name="detalle_tarea">Detalle de tarea</string>
    <string name="salir">Salir</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo">Nuevo</string>
    <string name="tareas">Tareas sprint</string>
    <string name="tarea_guardada">La tarea ha sido guardada</string>
    <string name="tarea_guardada_error">El envío de la tarea ha fallado</string>
    <string name="dialog_tarea_nueva_descripcion">Descripcion:</string>
    <string name="dialog_tarea_nueva_prioridad">Prioridad:</string>
    <string name="dialog_tarea_nueva_exito">La tarea ha sido creada con éxito</string>
    <string name="dialog_tarea_nueva_error">El envío de la tarea ha fallado</string>
    <string name="alta">Alta</string>
    <string name="baja">Baja</string>
    <string name="dialog_tarea_nueva_titulo">Introduzca los datos de la tarea:</string>
    <string name="dialog_sprint_nuevo_titulo">Introduzca las fechas del sprint:</string>
    <string name="dialog_sprint_nuevo_inicio">Fecha de inicio:</string>
    <string name="dialog_sprint_nuevo_fin">Fecha de fin:</string>
    <string name="dialog_sprint_nuevo_exito">El sprint ha sido creado con éxito</string>
    <string name="dialog_sprint_nuevo_error_servidor">El envío del sprint ha fallado</string>
    <string name="dialog_sprint_nuevo_error_inicio_fin">Erro: La fecha de fin debe ser posterior a la de inicio.</string>
    <string name="dialog_sprint_nuevo_error_fechas_no_validas">Error: Compruebe que las fechas seleccionadas son correctas.</string>
    <string name="dialog_sprint_nuevo_error_inicio">Error: Compruebe que fecha de inicio no es anterior al día actual.</string>
    <string name="cronometro">Cronometro</string>
    <string name="cronometro_iniciar">Iniciar</string>
    <string name="cronometro_parar">Parar</string>
    <string name="dialog_reunion_usuarios_titulo">Opciones de reunión:</string>
    <string name="dialog_reunion_usuarios_todos">Todos los del grupo</string>
    <string name="dialog_reunion_usuarios_seleccionar">Seleccionar</string>
    <string name="dialog_reunion_usuarios_seleccionar_titulo">Seleccione los usuarios:</string>
    <string name="dialog_reunion_usuarios_notificaciones_titulo">Notificaciones:</string>
    <string name="dialog_reunion_usuarios_notificaciones_turno">Cambio turno</string>
    <string name="dialog_reunion_usuarios_notificaciones_fin">Fin reunión</string>
    <string name="dialog_reunion_usuarios_tiempo_usuario_titulo">Minutos por turno:</string>
    <string name="turno">Turno:</string>
    <string name="opciones">Opciones</string>
    <string name="reunion_cronometro">Reunión cronometrada</string>
    <string name="reunion_cronometro_fin_reunion">Tiempo de reunión finalizado</string>
    <string name="reunion_cronometro_cambio_turno">Cambio de turno</string>
    <string name="InformeUsuario">Informe Usuario</string>
    <string name="InformeLogs">Informe Logs</string>
    <string name="InformeSprints">Informe Sprints</string>
    <string name="InformeProyecto">Informe Proyecto</string>
    <string name="InformeBackLog">Informe BackLog</string>
    <string name="tab_grupos">Grupos</string>
    <string name="siguienteButton">&gt;&gt;</string>
    <string name="anyoLabel">Año</string>
    <string name="mesLabel">Mes</string>
    <string name="anteriorButton">&lt;&lt;</string>
    <string name="Forecast">Predicción</string>
    <string name="Speed">Velocidad</string>
    <string name="Tablon">Tablón</string>
    <string name="guardar">guardar</string>
    <string name="cancelar">cancelar</string>
    <string name="Error">Error</string>
    <string name="Error_abriendo_archivo">Error abriendo el archivo .pdf</string>
    <string name="Formulario_registro">Formulario de registro</string>
    <string name="Error_Indeterminado">Error indeterminado</string>
    <string name="Error_sin_proyectos">No se han encontrado proyectos</string>
    <string name="No_Iniciada">No iniciaca</string>
    <string name="No_Finalizada">No finalizada</string>
    <string name="Del_Mes_De"> del mes de </string>
    <string name="tabURL">tabURL</string>
    <string name="Proyecto">Proyecto</string>
    <string name="Sprints">Sprints</string>
    <string name="Reunion">Reunion</string>
    <string name="Estadisticas">Estadisticas</string>
    <string name="Informes">Informes</string>
    <string name="Grupo">Grupo</string>
    <string name="fechaEntrega">Fecha de Entrega: </string>
    <string name="Progreso">Progreso:</string>
    <string name="backLog">BackLog: </string>
    <string name="serverMessage">Conectando con el servidor...</string>
    <string name="lugarReunionLabel">Lugar </string>
    <string name="asuntoReunionLabel">Asunto </string>
    <string name="enviarReunionButton">Enviar </string>
    <string name="mensajeCrearReunion">No hay reuniones para este dia.\nSi quieres crear una nueva pulse crear. </string>
    <string name="crearReunion">Crear </string>
    <string name="tab_mensajes">Mensajes</string>
    <string name="no_mensajes">No hay mensajes</string>
    <string name="de">De: </string>
    <string name="asunto">Asunto: </string>
    <string name="Mensajes">Mensajes </string>
     <string name="mensajes">Mensajes: </string>
    <string name="Para">Para </string>
	<string name="Error_grupos">Miembros del grupo no encontrados</string>
    <string name="Error_Estadisticas">Error generando las imagenes</string>
    <string name="Error_Cronometro">Error obteniendo los otros usuarios</string>
    <string name="Error_Registro">Error creando un usuario</string>
    <string name="Error_sprints_tareas">No se ha podido obtener las tareas del sprint</string>
    <string name="Error_sprints_envio">No se ha enviado la tarea</string>
    <string name="Error_modificar_tarea">No se ha enviado la tarea</string>
    <string name="Error_obtener_tareas">No se han obtenido las tareas del sprint</string>
    <string name="error_cargarUsuario">Error cargando usuario</string>
    <string name="Error_finalizando">Error finalizando la aplicacion</string>
    <string name="Error_crear_sprints">Error creando el sprint</string>
    <string name="Error_obtener_sprints">No se ha podido obtene el sprint</string>
    <string name="error_mensaje">No se han encontrado mensajes</string>

	<string name="espere">Espere</string>
	<string name="Buscando_usuarios">Espere mientras se cargan los datos de los usuarios</string>
	
</resources>