<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/proyecto_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/proyecto_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/fondo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nombreProyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minLines="2"
            android:textSize="20dp"
            android:textStyle="bold" >

            <requestFocus />
        </TextView>

        <TextView
            android:id="@+id/descripcionProyecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:textSize="17dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/fechaProyectoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:minLines="2"
                android:text="@string/fechaEntrega"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/fechaProyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/fechaProyectoText"
                android:minLines="2"
                android:textSize="17dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewPorcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Progreso"
                android:textSize="17dp" />

            <ProgressBar
                android:id="@+id/ProgressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textViewPorcentaje"
                android:layout_marginLeft="89dp" />
        </RelativeLayout>

        <TextView
            android:id="@id/fechaProyectoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:text="@string/backLog"
            android:textSize="17dp" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_tareas" />
    </LinearLayout>

</LinearLayout>