<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/informes_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/informes_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/fondo"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewInformeUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/imageView1"
                android:textSize="17dip"
                android:text="@string/InformeUsuario" />

            <ImageView
                android:id="@id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/pdf" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewInformeProyecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/imageView2"
                 android:textSize="17dip"
                android:text="@string/InformeProyecto" />

            <ImageView
                android:id="@id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/pdf" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewInformebacklog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                 android:textSize="17dip"
                android:layout_toRightOf="@+id/imageView3"
                android:text="@string/InformeBackLog" />

            <ImageView
                android:id="@id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/pdf" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewInformeSprints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="17dip"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/imageView4"
                android:text="@string/InformeSprints" />

            <ImageView
                android:id="@id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/pdf" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewInformeLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="17dip"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/imageView5"
                android:text="@string/InformeLogs" />

            <ImageView
                android:id="@id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/pdf" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>